# hcalc

./: README.md  TAGS  hcalc.cabal  stack.yaml
src/: Calc.hs  Main.hs
