name:                hcalc
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mrkgnao/hcalc#readme
license:             BSD3
license-file:        LICENSE
author:              Soham Chowdhury
maintainer:          chow.soham@gmail.com
copyright:           Whatever you like
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable hcalc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers
